<resources>
    <string name="app_name">SMART</string>
    <string name="error.please_login">Error, please re-Login</string>
    <string name="view_is_hidden">View is now hidden</string>
    <string name="warning.logged_out_soon">You will be logged out of SMART soon</string>
    <string name="no_internet">No Internet connection!</string>
    <string name="updating_appointments">Updating Appointments</string>
    <string name="logging_out">Logging Out</string>
    <string name="you_are_now_logged_out">You are now logged out</string>
    <string name="error.logout">There was a problem with the logout, \nPlease try again.</string>
    <string name="success.logout">You have been logged out of SMART</string>
    <string name="error.downloading_appointments">Error downloading appointments \nplease try again</string>
    <string name="logging_in">Logging In</string>
    <string name="error.fields_empty">Error fields empty</string>
    <string name="main_logo"> main_logo</string>
    <string name="responseLogin">Login</string>
    <string name="username"><i>Username</i></string>
    <string name="password"><i>Password</i></string>
    <string name="smart">SMART</string>
    <string name="secure_maternity">Secure Maternity</string>
    <string name="appointment_recording">Appointment Recording Tracker</string>
    <string name="maternity_hospital">© National Maternity Hospital, Ireland</string>
    <string name="about_url"><a href="http://54.72.7.91/#/about">About</a></string>
    <string name="patient_search">Search Patient</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="start_stop_clinic">Start/Stop Clinic</string>
    <string name="todays_appointments">Today\'s Appointments</string>
    <string name="updating_info">Updating Information</string>
    <string-array name="patient_search_options">
        <item>Select Search Option</item>
        <item>Name</item>
        <item>Hospital Number</item>
        <item>DOB</item>
    </string-array>
    <string name="appointment_type">Appointment Type</string>
    <string name="clinic_option">Clinic Option</string>
    <string name="visit_option">Visit Option</string>
    <string name="show_appointment">Show Appointment</string>
    <string name="select_service_option">Select Service Option</string>
    <string name="select_clinic">Select Clinic</string>
    <string name="select_visit_option">Select Visit Option</string>
    <string name="select_day">Select Day</string>
    <string name="select_week">Select Week</string>
    <string-array name="appointment_type_list">
        <item>Select Appointment Type</item>
        <item>- Clinics</item>
        <item>- Visits</item>
    </string-array>
    <string-array name="visit_service_option">
        <item>Select Visit Option</item>
        <item>- Visit 1</item>
        <item>- Visit 2</item>
        <item>- Visit 3</item>
    </string-array>
    <string-array name="visit_return_type">
        <item>Select Visit Type</item>
        <item>Follow-up (15 min)</item>
        <item>New (30 min)</item>
    </string-array>
    <string-array name="weeks">
        <item>Select Week</item>
        <item>- Week 1</item>
        <item>- Week 2</item>
        <item>- Week 3</item>
        <item>- Week 4</item>
        <item>- Week 5</item>
        <item>- Week 6</item>
        <item>- Week 7</item>
        <item>- Week 8</item>
        <item>- Week 9</item>
        <item>- Week 10</item>
    </string-array>
    <string name="enter_name"><i>Enter Name Here</i></string>
    <string name="enter_hospital_number"><i>Enter Hospital Number Here</i></string>
    <string name="enter_dob"><i>Enter DOB Here</i></string>
    <string name="search_result">Search Results</string>
    <string name="btn_search">Search</string>
	<string name="dob">Date of Birth</string>
	<string name="no_user_found">No Service User found</string>
    <string name="with_details">with those details</string>
    <string name="try_again">Please try again.</string>
	<string name="day"><i>Day</i></string>
	<string name="month"><i>Month</i></string>
	<string name="year"><i>Year</i></string>
    <string name="fetching_information">Fetching Information</string>
    <string name="enter_something_into_fields">Please enter something in the search fields</string>
    <string name="ante_natal">Ante-Natal</string>
    <string name="personal">Personal</string>
    <string name="post_natal">Post-Natal</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="next_of_kin">Next-of-kin</string>
    <string name="action_settings">Settings</string>
    <string name="user_age">Age: </string>
    <string name="hospital_number">Hospital Number</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="road">Road</string>
    <string name="county">County</string>
    <string name="post_code">Post Code</string>
    <string name="kin_name">Next Of Kin Name</string>
    <string name="kin_contact">Next Of Kin Contact Number</string>
    <string name="add_action">Action</string>
    <string name="appointment">Appointment</string>
	<string name="age">Age</string>
    <string name="edd">EDD</string>
    <string name="gestation">Gestation</string>
    <string name="blood_group">Blood group</string>
    <string name="rhesus">Rhesus</string>
    <string name="parity">Parity</string>
    <string name="obstretic_history">Obstretic history</string>
    <string name="last_period">Last period</string>
    <string name="mother_info">Mother</string>
    <string name="birth_mode">Birth Mode</string>
    <string name="perineum">Perineum</string>
    <string name="anti_d">Anti-D</string>
    <string name="midwives_notes">Midwifery Log</string>
    <string name="baby_info">Baby</string>
    <string name="delivery_date">Date of delivery</string>
    <string name="delivery_time">Time of delivery</string>
    <string name="days_sinceBirth">Days since birth</string>
    <string name="sex_of_baby">Sex of baby</string>
    <string name="birth_weight">Birth Weight(kg)</string>
    <string name="vit_k">VitK</string>
    <string name="baby_hearing">Hearing</string>
    <string name="baby_feeding">Feeding</string>
    <string name="nbst">NBST</string>
    <string name="parity_baby_name">Name</string>
    <string name="parity_hospital_number">Hospital Number</string>
    <string name="parity_dob">Date of Birth</string>
    <string name="parity_gender">Sex</string>
    <string name="parity_gestation">Gestation</string>
    <string name="parity_mode_of_birth">Mode Of Birth</string>
    <string name="parity_birth_outcome">Birth Outcome</string>
    <string name="parity_weight">Weight (kg)</string>
    <string name="parity_hearing">Hearing</string>
    <string name="parity_nbst">NBST</string>
    <string name="parity_vit_k">Vit K</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_dialog_message">Would you like to Logout?</string>
    <string name="logout_title">Logout</string>
    <string name="midwife_name">Name:</string>
    <string name="midwife_email">Email:</string>
    <string name="primary_number">Primary No:</string>
    <string name="secondary_number">Secondary No:</string>
    <string name="clinic_title">Clinic Name</string>
    <string name="prev_button">Prev</string>
    <string name="date_button">Date</string>
    <string name="next_button">Next</string>
 	<string name="appt_search_hint"><i>Enter Here</i></string>
    <string-array name="visit_priority_list">
        <item>Select Visit Priority</item>
        <item>Scheduled</item>
        <item>Drop-In</item>
    </string-array>
    <string-array name="visit_type_list">
        <item>Select Visit Type</item>
        <item>Ante-Natal</item>
        <item>Post-Natal</item>
 	</string-array>
    <string-array name="return_type_list">
        <item>Select Appointment Type</item>
        <item>Follow-up (15 min)</item>
        <item>New (30 min)</item>
    </string-array>
 	<string name="confirm_appointment">Confirm Appointment</string>
 	<string name="service_user">Service User</string>
    <string name="appointment_clinic">Appointment Clinic</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="cancel">Cancel</string>
    <string name="error.field_empty">Field Empty</string>
    <string name="error.cannot_proceed_fields_empty">Cannot proceed, \nSome fields are empty!</string>
    <string name="search_results">Search Results</string>
    <string name="no_search_results_found">No search results found</string>
    <string name="booking_appointment">Booking Appointment</string>
    <string name="error.no_internet_booking_appointment">No internet, appointment will be booked when available</string>
    <string name="appointment_for">Appointment for:</string>
    <string name="to_attend">To Attend:</string>
    <string name="at">At:</string>
    <string name="confirm_email">Confirmation email to:</string>
    <string name="confirm_sms">Confirmation SMS to:</string>
    <string name="book_question">Book if details are correct:</string>
    <string name="book">Book</string>
    <string name="user_address_title">Google Maps</string>
    <string name="user_address_message">Are you sure you want to go to Google Maps?</string>
    <string name="contact_title">Select Contact Option</string>
    <string-array name="anti_d_list">
        <item>Yes</item>
        <item>No</item>
        <item>Not Required</item>
        <item>Declined</item>
    </string-array>
    <string-array name="vit_k_list">
        <item>None</item>
        <item>Oral</item>
        <item>IM</item>
        <item>Declined</item>
    </string-array>
    <string-array name="hearing_list">
        <item>None</item>
        <item>Complete</item>
        <item>Appt given</item>
        <item>Declined</item>
    </string-array>
    <string-array name="feeding_list">
        <item>Breast</item>
        <item>Bottle</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="nbst_list">
        <item>None</item>
        <item>Done</item>
        <item>Declined</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Search Patient</item>
        <item>Book Appointment</item>
        <item>Start/Stop Clinic</item>
        <item>Today\'s Appointments</item>
        <item>Sync</item>
        <item>Logout</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="start_clinic">Start Clinic</string>
    <string name="stop_clinic">End Clinic</string>
    <string name="select_clinic_from_below">Select a Clinic from Below</string>
    <string name="clinics_started">Already In-progress</string>
    <string name="clinics_stopped">Already Finished Today</string>
    <string name="clinics_not_started">Waiting to be Started Today</string>
    <string name="reset_record">Reset Clinic Times</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="no_clinics_opened">There are no clinics open today</string>
    <string name="updating_time_records">Updating Clinic Time Records</string>
    <string name="deleting_time_record">Deleting Time Record</string>
    <string name="no_clinics_to_be_started">No clinics to be started</string>
    <string name="no_clinics_currently_started">No clinics currently started</string>
    <string name="no_clinics_currently_stopped">No clinics currently stopped</string>
    <string name="enter_note_hint"><i>Enter Note Here . . .</i></string>
    <string name="midwifery_log">Midwifery Log</string>
    <string name="save_note">Save Note</string>
    <string name="add_pregnancy_note">Add Pregnancy Note</string>
    <string name="updating_notes">Updating Notes</string>
</resources>