<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}">

    <EditText
        android:id="@+id/et_search_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:paddingTop="@dimen/padding_medium"
        android:singleLine="true"
        android:textColorHint="#A9A9A9" />

    <EditText
        android:id="@+id/et_search_hospital_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_hospital_number"
        android:singleLine="true"
        android:textColorHint="#A9A9A9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.0">

        <EditText
            android:id="@+id/et_search_dob_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:hint="@string/day"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textColorHint="#A9A9A9" />

        <EditText
            android:id="@+id/et_search_dob_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:hint="@string/month"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textColorHint="#A9A9A9" />

        <EditText
            android:id="@+id/et_search_dob_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:hint="@string/year"
            android:inputType="number"
            android:maxLength="4"
            android:singleLine="true"
            android:textColorHint="#A9A9A9" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_search"
        android:theme="@style/CallToActionButton"/>

    <TextView
        android:id="@+id/tv_search_results"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_Xsmall"
        android:paddingLeft="@dimen/padding_Xsmall"
        android:text="@string/search_result" />

    <LinearLayout
        android:id="@+id/ll_no_user_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_alert_triangle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_user_found"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/with_details"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/try_again"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small" />
    </LinearLayout>


    <ListView
        android:id="@+id/lv_search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>