<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev_button"
            android:textSize="@dimen/text_Xsmall"
            android:drawableLeft="@drawable/ic_chevron_left_black_24dp"/>

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/lightBlue"
            android:text="@string/date_button"
            android:textSize="@dimen/text_Xsmall" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_button"
            android:textSize="@dimen/text_Xsmall"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_appointment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>